--- a/Simulador/package.json
+++ b/Simulador/package.json
@@ -4,9 +4,9 @@
   "description": "Simulador de credito",
   "main": "index.js",
    
-   "engines": {npm
-      "node": "16.x"
-    },
+   "engines": {
+    "node": "16.x"
+  }
    
   "scripts": {
     "build": "webpack  --mode production --progress --config webpack-prod.js",
